Added css folder

--- a/custom_functions/index.html
+++ b/custom_functions/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
-<h1>TEST</h1>
-<h2>Testing Again</h2>
+<html>
+<head>
+  <title></title>
+  <link rel="stylesheet" href="../base.css">
+</head>
+<body>
+<script src="./cf.js"></script>
+</body>
+</html>
+
