--- a/custom_functions/index.html
+++ b/custom_functions/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../base.css">
 </head>
 <body>
+  <p>Testing</p>
 <script src="./cf.js"></script>
 </body>
 </html>
-
